<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.detail.DetailActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_page_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="운동 횟수 세팅" />

        <TextView
            android:id="@+id/text_view_exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/color_111111"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_page_toolbar"
            tools:text="운동 명" />

        <TextView
            android:id="@+id/text_view_detail_page_count"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/background_detail_textview"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_exercise_name"
            android:text="@string/detail_text_view_first_num" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minus_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/shape_circ_stroke_66ffff"
            android:text="@string/button_minus"
            android:layout_marginStart="15dp"
            app:layout_constraintEnd_toStartOf="@+id/text_view_detail_page_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_detail_page_count" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plus_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/shape_circ_stroke_66ffff"
            android:text="@string/button_plus"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_view_detail_page_count"
            app:layout_constraintTop_toTopOf="@+id/text_view_detail_page_count" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_detail_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_start_button"
            android:background="@drawable/shape_circ_stroke_66ffff"
            app:layout_constraintTop_toBottomOf="@id/text_view_detail_page_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="80dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>