<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/text_view_login_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/login_app_name"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="85dp"
                android:text="@string/login"
                android:textColor="@color/color_f6bf54"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_login_app_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="83dp"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:hint="@string/edit_text_id"
                android:textColorHint="@color/color_c4c4c4"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_login_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="83dp"
                android:layout_marginTop="25dp"
                android:background="@null"
                android:hint="@string/edit_text_password"
                android:inputType="textPassword"
                android:textColorHint="@color/color_c4c4c4"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_id" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="72dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/selector_rect_radius_100_c4c4c4_f6bf54"
                android:gravity="center"
                android:text="@string/button_login"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_view_sign_up"
                android:textColor="@color/color_f6bf54"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_kakao_login"
                    android:layout_width="39.3dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:background="@drawable/shape_circ_fee500_stroke_efd54f_solid"
                    android:drawableStart="@drawable/layerlist_button_kakao"
                    android:paddingStart="13.33dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_naver_login"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_naver_login"
                    android:layout_width="39.3dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/shape_circ_03c75a_stroke_2aab15_solid"
                    android:drawableStart="@drawable/layerlist_button_naver"
                    android:paddingStart="15.44dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button_kakao_login"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>