<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/text_view_sign_up_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/mainlogo"
                android:layout_marginEnd="70dp"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sign_up_id_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up_app_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="65dp"
                android:text="@string/text_view_email"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="63dp"
                android:textColorHint="@color/color_c4c4c4"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_id_text_view"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sign_up_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_id"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="65dp"
                android:text="@string/text_view_password"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="63dp"
                android:textColorHint="@color/color_c4c4c4"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_password_text_view"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_sign_up"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="72dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/selector_rect_radius_100_c4c4c4_f6bf54"
                android:gravity="center"
                android:text="@string/text_sign_up"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>